# pixel-pay

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  setup.sh  start.sh  stop.sh
admin/: index.html  package.json  tailwind.config.ts  tsconfig.json
admin/src/: index.css
admin/src/lib/: api.ts
admin/src/pages/: DashboardPage.tsx  LoginPage.tsx  PaymentsPage.tsx  PriceManagementPage.tsx  ProductsPage.tsx  TransactionsPage.tsx  UsersPage.tsx
api/: .env.example  Cargo.toml
api/src/: config.rs  db.rs  error.rs
api/src/handlers/: admin_export.rs  auth.rs  mod.rs  notification.rs  payment.rs  product.rs  profile.rs  voucher.rs
api/src/middleware/: auth.rs
api/src/models/: category.rs  transaction.rs
api/src/routes/: api.rs
api/src/services/: auth_service.rs  digiflazz_service.rs  midtrans.rs  mod.rs  product_service.rs  transaction_service.rs
apps/admin/: package.json
apps/admin/src/: App.tsx
apps/api/: .env.example
apps/api/src/: config.rs  main.rs
apps/web/: package.json
database/: drizzle.config.ts  package.json  tsconfig.json
database/src/: client.ts  seed.ts
database/src/schema/: categories.ts  index.ts  products.ts  transactions.ts  users.ts  wallets.ts
web/: index.html  package.json  tailwind.config.ts  tsconfig.json
web/public/: manifest.json  sw.js
web/src/: App.tsx  index.css
web/src/lib/: api.ts
web/src/pages/: ContactPage.tsx  FaqPage.tsx  LoginPage.tsx  NotificationsPage.tsx  ProfilePage.tsx  SearchPage.tsx  TermsPage.tsx  TopUpPage.tsx  TopupGuidePage.tsx  (+2 more)
(+41 files in other folders)
